--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^1.0.4",
     "date-fns": "^2.23.0",
     "next": "latest",
+    "next-routes": "^1.4.2",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
